# CUDA_examples

./: Diagramma senza titolo.drawio  README.md  VectAdd.cu  add.cu  convolution.cu  convolution2d.cu  dot.cu  gather_info.cu  histogram.cu  histogram_shared.cu  matrixmul.cu  sumReduction.cu
Edge_detection/: CMakeLists.txt  GPU_rgb2gray_sobel.cu  GPU_rgb2gray_sobel.h  cmake_install.cmake  main.cpp
